--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <h2>My Heros</h2>
-  <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </li>
-  </ul>
-  <app-hero-detail [hero]="selectedHero"></app-hero-detail>
+    <h1>{{title}}</h1>
+    <nav>
+        <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+        <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+    </nav>
+    <router-outlet></router-outlet>
 </div>
 
